feat: Adding search form

--- a/css/index.css
+++ b/css/index.css
@@ -28,6 +28,24 @@ html, body {
 	color            : var(--black);
 }
 
+h1, h2, h3, h4, h5, h6 {
+	font-weight : bold;
+	margin      : .2rem 0;
+	padding     : 0;
+}
+h1 {
+	font-size : 1rem;
+}
+
+.text-grey {
+	color : var(--grey);
+}
+
+.flex-vertical {
+	display        : flex;
+	flex-direction : column;
+}
+
 .flex-horizontal {
 	display        : flex;
 	flex-direction : row;
@@ -36,6 +54,9 @@ html, body {
 	flex-direction : row-reverse;
 }
 
+.justify-center {
+	justify-content : center;
+}
 .justify-space-between {
 	justify-content : space-between;
 }
@@ -56,4 +77,29 @@ nav a {
 nav a.anchor.active {
 	border-top : 2px solid var(--blue);
 	color      : var(--blue);
+}
+
+/* SEARCH FORM */
+#search-form > label {
+	background-color : var(--bg-grey);
+	padding          : 1rem;
+}
+#search-form > input[type='text'] {
+	border-color : var(--bg-grey);
+	border-style : solid;
+	border-width : 2px 0;
+	padding      : .8rem;
+	font-weight  : bold;
+	outline      : none;
+	font-size    : 1rem;
+}
+#search-form > input[type='submit'] {
+	--radius         : 11px;
+	background-color : var(--blue);
+	color            : var(--white);
+	border           : none;
+	padding          : .5rem;
+	border-radius    : 0 var(--radius) var(--radius) 0;
+	font-weight      : bold;
+	font-size        : 1rem;
 }
