--- a/css/index.css
+++ b/css/index.css
@@ -9,6 +9,8 @@
 
 	--grey       : #7F7F7F;
 	--bg-grey    : #F2F2F2;
+
+	--radius     : 1.5rem;
 }
 
 * {
@@ -20,12 +22,14 @@
 }
 
 html {
-	font-size: 62.5%;
+	font-size : 62.5%;
 }
-html, body {
+body {
 	margin           : 0;
+	padding          : 0;
 	background-color : var(--white);
 	color            : var(--black);
+	font-size        : 2rem;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -34,11 +38,26 @@ h1, h2, h3, h4, h5, h6 {
 	padding     : 0;
 }
 h1 {
-	font-size : 1rem;
+	font-size     : 2rem;
+	margin-bottom : 1rem;
+}
+
+small {
+	font-size : 1.5rem;
 }
 
 .text-grey {
 	color : var(--grey);
+}
+.text-blue {
+	color : var(--blue);
+}
+.text-white {
+	color : var(--white);
+}
+
+.bold {
+	font-weight : bold;
 }
 
 .flex-vertical {
@@ -54,52 +73,112 @@ h1 {
 	flex-direction : row-reverse;
 }
 
+.wrap {
+	flex-wrap : wrap;
+}
+
 .justify-center {
 	justify-content : center;
+}
+.justify-end {
+	justify-content : flex-end;
 }
 .justify-space-between {
 	justify-content : space-between;
 }
 
-.grow {
-	flex-grow : 1;
+.align-start {
+	align-items : flex-start;
+}
+.align-end {
+	align-items : flex-end;
 }
 
-/* NAV-BAR */
+.align-self-end {
+	align-self : flex-end;
+}
+
 a {
 	text-decoration : none;
 	color           : var(--black);
 }
-nav a {
-	margin  : 0;
-	padding : 1rem;
+
+/* NAV-BAR */
+.nav-bar {
+	padding : 3rem 1rem 1rem 1rem;
 }
-nav a.anchor.active {
-	border-top : 2px solid var(--blue);
+.nav-bar > .nav-bar-container {
+	display         : flex;
+	flex-flow       : row wrap;
+	flex-grow       : 1;
+	justify-content : space-between;
+}
+.nav-bar > .nav-bar-container > .nav-bar-brand {
+	padding   : 0 .5rem;
+	flex-grow : 1;
+}
+.nav-bar > .nav-bar-container > .nav-bar-link {
 	color      : var(--blue);
+	padding    : 1rem 1.5rem;
+	align-self : center;
+}
+.nav-bar > .nav-bar-container > .nav-bar-group {
+	margin          : 1rem -1rem 0;
+	display         : flex;
+	flex-flow       : row nowrap;
+	justify-content : center;
+	flex-grow       : 1;
+	width           : 100%;
+}
+.nav-bar > .nav-bar-container > .nav-bar-group > a {
+	width         : 50%;
+	text-align    : center;
+	margin        : 0;
+	padding       : 1.5rem;
+	border-bottom : 3px solid var(--bg-grey);
+}
+.nav-bar > .nav-bar-container > .nav-bar-group > a.active {
+	color        : var(--blue);
+	border-color : var(--blue);
+}
+.nav-bar > .nav-bar-container > .nav-bar-group > a:hover {
+	color : var(--blue);
+}
+
+body > main {
+	padding : 3rem;
 }
 
 /* SEARCH FORM */
+#search-form {
+	margin-top : 3rem;
+	display    : flex;
+	flex-flow  : row nowrap;
+}
 #search-form > label {
 	background-color : var(--bg-grey);
-	padding          : 1rem;
+	padding          : 1rem 2rem;
+	border-radius    : var(--radius) 0 0 var(--radius);
 }
 #search-form > input[type='text'] {
 	border-color : var(--bg-grey);
 	border-style : solid;
 	border-width : 2px 0;
-	padding      : .8rem;
+	padding      : 1.2rem 1.5rem;
 	font-weight  : bold;
 	outline      : none;
-	font-size    : 1rem;
+	font-size    : 1.8rem;
+
+	width        : calc(100% - 4rem - 4rem);
 }
-#search-form > input[type='submit'] {
-	--radius         : 11px;
+#search-form > button[type='submit'] {
 	background-color : var(--blue);
 	color            : var(--white);
 	border           : none;
-	padding          : .5rem;
-	border-radius    : 0 var(--radius) var(--radius) 0;
+	margin-left      : -1rem;
+	padding          : 1rem 1.7rem;
+	border-radius    : var(--radius);
 	font-weight      : bold;
-	font-size        : 1rem;
+	font-size        : 1.5rem;
+	cursor           : pointer;
 }
