--- a/css/index.css
+++ b/css/index.css
@@ -208,7 +208,7 @@ body > main {
 	cursor           : pointer;
 }
 
-/* FILTERS */
+/* FILTERS SECTION */
 #filters-section {
 	display   : flex;
 	flex-flow : column nowrap;
@@ -268,7 +268,7 @@ body > main {
 	padding-top : .5rem;
 }
 
-/* POPULAR LODGING */
+/* POPULAR LODGING SECTION */
 #popular-lodging {
 	display          : flex;
 	flex-flow        : column nowrap;
@@ -277,8 +277,10 @@ body > main {
 	margin           : 0 -3rem;
 }
 #popular-lodging > :first-child {
-	display   : flex;
-	flex-flow : row nowrap;
+	display         : flex;
+	flex-flow       : row nowrap;
+	justify-content : space-between;
+	align-items     : baseline;
 }
 #popular-lodging > :last-child {
 	display   : flex;
@@ -289,31 +291,84 @@ body > main {
 	background-color : var(--white);
 	border-radius    : calc(var(--radius) * 1.5);
 	box-shadow       : 0 0 10px rgba(0, 0, 0, .15);
+	transition       : box-shadow .25s;
 	padding          : .5rem;
 	display          : flex;
-	flex-flow        : row nowrap;
-	margin           : .5rem 0;
+	flex-flow        : column nowrap;
 }
 .card-thumbnail {
-	width           : 40%;
-	height          : 35vw;
-	border-radius   : calc(var(--radius) * 1.2) 0 0 calc(var(--radius) * 1.2);
+	width           : 100%;
+	height          : 30vw;
+	border-radius   : calc(var(--radius) * 1.2) calc(var(--radius) * 1.2) 0 0;
 	object-fit      : cover;
 	object-position : center center;
-	margin-right    : 2rem;
+}
+
+.card.card-horizontal {
+	flex-flow : row nowrap;
+}
+.card.card-horizontal > .card-thumbnail {
+	width         : 40%;
+	border-radius : calc(var(--radius) * 1.2) 0 0 calc(var(--radius) * 1.2);
+	margin-right  : 1rem;
+}
+
+.card-title {
+	font-size     : 1.6rem;
+	font-weight   : bold;
+	margin-bottom : .5rem;
 }
 .card-container {
-	display   : flex;
-	flex-flow : column nowrap;
+	display         : flex;
+	flex-flow       : column nowrap;
+	justify-content : flex-start;
+	padding         : 1rem;
 }
 .rating {
-	display      : flex;
-	flex-flow    : row nowrap;
-	justify-self : flex-end;
+	display         : flex;
+	flex-flow       : row nowrap;
+	flex-grow       : 1;
+	justify-content : flex-start;
+	align-items     : flex-end;
+	font-size       : 1.2rem;
+	margin-top      : 1rem;
 }
 .fa-star {
-	color : var(--bg-grey);
+	color        : var(--bg-grey);
+	margin-right : .1rem;
 }
 .fa-star.full {
 	color : var(--blue);
+}
+
+.card-link {
+	display       : block;
+	margin-bottom : 2rem;
+}
+.card-link:hover > .card {
+	box-shadow : 0 0 10px rgba(0, 0, 0, .3);
+}
+
+.read-more-link {
+	font-size   : 2rem;
+	font-weight : bold;
+	margin      : 1rem 0;
+}
+
+/* LODGING SECTION */
+#hebergements {
+	display   : flex;
+	flex-flow : column nowrap;
+	padding   : 3rem 2rem;
+	margin    : 0 -3rem;
+}
+#hebergements > :first-child {
+	display   : flex;
+	flex-flow : row nowrap;
+}
+#hebergements > :last-child {
+	display         : flex;
+	flex-flow       : column nowrap;
+	justify-content : flex-start;
+	align-items     : stretch;
 }
