--- a/css/index.css
+++ b/css/index.css
@@ -360,7 +360,7 @@ body > main {
 	display   : flex;
 	flex-flow : column nowrap;
 	padding   : 3rem 2rem;
-	margin    : 0 -3rem;
+	margin    : 0 -3rem 2rem -3rem;
 }
 #hebergements > :first-child {
 	display   : flex;
@@ -371,4 +371,15 @@ body > main {
 	flex-flow       : column nowrap;
 	justify-content : flex-start;
 	align-items     : stretch;
+}
+
+/* ACTIVITIES SECTION */
+#activites .card-title {
+	margin-top : 1rem;
+}
+.card.card-full {
+	padding: 0 0 .5rem 0;
+}
+.card.card-full > .card-thumbnail {
+	object-position: center center;
 }
