--- a/css/index.css
+++ b/css/index.css
@@ -314,8 +314,24 @@ body > main {
 	margin-right  : 1rem;
 }
 
+.card-link {
+	display       : flex;
+	flex-flow     : column nowrap;
+	margin-bottom : 2rem;
+}
+.card-link:hover > .card {
+	box-shadow : 0 0 10px rgba(0, 0, 0, .3);
+}
+
+.card.card-full {
+	padding : 0 0 .5rem 0;
+}
+.card.card-full > .card-thumbnail {
+	object-position : center center;
+}
+
 .card-title {
-	font-size     : 1.6rem;
+	font-size     : 1.4rem;
 	font-weight   : bold;
 	margin-bottom : .5rem;
 }
@@ -342,14 +358,6 @@ body > main {
 	color : var(--blue);
 }
 
-.card-link {
-	display       : flex;
-	margin-bottom : 2rem;
-}
-.card-link:hover > .card {
-	box-shadow : 0 0 10px rgba(0, 0, 0, .3);
-}
-
 .read-more-link {
 	font-size   : 2rem;
 	font-weight : bold;
@@ -357,7 +365,7 @@ body > main {
 }
 
 /* LODGING SECTION */
-#hebergements {
+#hebergements, #activites {
 	display   : flex;
 	flex-flow : column nowrap;
 	padding   : 3rem 2rem;
@@ -375,49 +383,59 @@ body > main {
 }
 
 /* ACTIVITIES SECTION */
-#activites > :last-child {
-	display               : grid;
-	grid-template-areas   :
-		'FIRST SECOND FOURTH FIFTH'
-		'FIRST THIRD  FOURTH SIXTH';
-	grid-template-columns : repeat(4, 1fr);
-	grid-template-rows    : repeat(2, auto);
-	grid-gap              : 3rem;
+#activites {
+	margin-bottom : 3rem;
 }
-#activites > :last-child > .card-link:nth-child(3n+1) {
-	grid-row : 1 / 3;
-}
-#activites > :last-child > .card-link:nth-child(3n+2) {
-	grid-row : 1 / 2;
-}
-#activites > :last-child > .card-link:nth-child(3n+2) > .card.card-full > .card-thumbnail,
-#activites > :last-child > .card-link:nth-child(3n+3) > .card.card-full > .card-thumbnail {
-	max-height : calc(390px / 2);
-}
-#activites > :last-child > .card-link:nth-child(3n+3) {
-	grid-row : 2 / 3;
-}
-
-#activites > :last-child > .card-link {
-	margin : 0;
-}
-#activites > :last-child > .card-link > .card.card-full {
-	flex-grow : 1;
-}
-#activites > :last-child > .card-link > .card.card-full > .card-thumbnail {
-	height     : auto;
-	flex-grow  : 1;
-	object-fit : cover;
-}
-
 #activites .card-title {
 	margin-top : 1rem;
 }
-.card.card-full {
-	padding : 0 0 .5rem 0;
+
+#cards-grid {
+	display   : flex;
+	flex-flow : column nowrap;
 }
-.card.card-full > .card-thumbnail {
-	object-position : center center;
+#cards-grid > .card-link > .card.card-full {
+	flex-grow  : 1;
+	max-height : 100%;
+}
+
+@media (min-width : 480px) {
+	#cards-grid {
+		display               : grid;
+		grid-template-columns : repeat(4, 1fr);
+		grid-template-rows    : repeat(10, 1fr);
+		grid-gap              : 3rem;
+		max-height: 450px;
+	}
+
+	#cards-grid > .card-link:nth-child(3n+1) {
+		grid-row : 1 / 11;
+	}
+	#cards-grid > .card-link:nth-child(2) {
+		grid-row : 1 / 7;
+	}
+	#cards-grid > .card-link:nth-child(3) {
+		grid-row : 7 / 11;
+	}
+
+	#cards-grid > .card-link:nth-child(5) {
+		grid-row : 1 / 6;
+	}
+	#cards-grid > .card-link:nth-child(6) {
+		grid-row : 6 / 11;
+	}
+
+	#cards-grid > .card-link {
+		margin          : 0;
+		flex-direction  : column;
+		justify-content : stretch;
+	}
+	#cards-grid > .card-link > .card.card-full > .card-thumbnail {
+		flex-grow  : 1;
+		max-height : calc(100% - 5.5rem);
+		object-fit : cover;
+		object-position: center center;
+	}
 }
 
 /* FOOTER */
