--- a/css/index.css
+++ b/css/index.css
@@ -96,11 +96,15 @@ a:hover {
 	margin-bottom    : .5rem;
 }
 .card-thumbnail {
+	display : block;
+	height  : 30vw;
+}
+.card-thumbnail > img {
 	width           : 100%;
-	height          : 30vw;
-	border-radius   : calc(var(--radius) * 1.2) calc(var(--radius) * 1.2) 0 0;
+	height          : 100%;
 	object-fit      : cover;
 	object-position : center center;
+	border-radius   : calc(var(--radius) * 1.2) calc(var(--radius) * 1.2) 0 0;
 }
 .card-container {
 	display         : flex;
@@ -131,13 +135,18 @@ a:hover {
 }
 
 .card.card-horizontal {
-	flex-flow : row nowrap;
+	flex-flow       : row nowrap;
+	justify-content : flex-start;
+	align-items     : stretch;
 }
 .card.card-horizontal > .card-thumbnail {
-	width         : 38%;
+	height       : 36vw;
+	margin-right : 1rem;
+}
+.card.card-horizontal > .card-thumbnail > img {
+	width         : 32vw;
 	height        : 36vw;
 	border-radius : calc(var(--radius) * 1.2) 0 0 calc(var(--radius) * 1.2);
-	margin-right  : 1rem;
 }
 .card.card-horizontal > .card-container {
 	padding-bottom : 1rem;
@@ -162,8 +171,10 @@ a:hover {
 	margin-bottom : 1.5rem;
 }
 .card.card-full > .card-thumbnail {
+	height : 36vw;
+}
+.card.card-full > .card-thumbnail > img {
 	object-position : center 18%;
-	height          : 35vw;
 }
 .card.card-full .card-title {
 	margin  : .8rem 0 .8rem 0;
@@ -386,8 +397,8 @@ body > main {
 	display   : flex;
 	flex-flow : column nowrap;
 }
-#cards-grid > .card-link:nth-child(2) > .card.card-full > .card-thumbnail {
-	object-position : center center;
+#cards-grid > .card-link:nth-child(2) > .card.card-full > .card-thumbnail > img {
+	object-position : center 42%;
 }
 
 #popular-lodging > :first-child,
@@ -448,8 +459,10 @@ body > main {
 		justify-content : stretch;
 	}
 	#cards-grid > .card-link > .card.card-full > .card-thumbnail {
-		flex-grow       : 1;
-		max-height      : calc(100% - 5.5rem);
+		flex-grow  : 1;
+		max-height : calc(100% - 5.5rem);
+	}
+	#cards-grid > .card-link > .card.card-full > .card-thumbnail > img {
 		object-fit      : cover;
 		object-position : center center;
 	}
@@ -503,8 +516,10 @@ body > main {
 		justify-content : stretch;
 	}
 	#cards-grid > .card-link > .card.card-full > .card-thumbnail {
-		flex-grow       : 1;
-		max-height      : calc(100% - 5.5rem);
+		flex-grow  : 1;
+		max-height : calc(100% - 5.5rem);
+	}
+	#cards-grid > .card-link > .card.card-full > .card-thumbnail > img {
 		object-fit      : cover;
 		object-position : center center;
 	}
