--- a/css/index.css
+++ b/css/index.css
@@ -199,9 +199,11 @@ a:hover {
 	height : 6rem;
 }
 .nav-bar-link {
-	color      : var(--blue);
-	padding    : 1rem 1.5rem;
-	align-self : center;
+	display         : flex;
+	flex-flow       : column nowrap;
+	justify-content : center;
+	color           : var(--blue);
+	padding         : 1rem 1.5rem;
 }
 .nav-bar-group {
 	margin          : 1rem -1rem 0;
@@ -230,7 +232,9 @@ a:hover {
 
 /* CONTENT */
 body > main {
-	padding : 0 2rem;
+	--horizontal-padding : 2rem;
+
+	padding              : 0 var(--horizontal-padding);
 }
 
 /* HEADER */
@@ -458,6 +462,9 @@ body > main {
 		flex-direction  : column;
 		justify-content : stretch;
 	}
+	#cards-grid .card.card-full {
+		margin-bottom : 0;
+	}
 	#cards-grid > .card-link > .card.card-full > .card-thumbnail {
 		flex-grow  : 1;
 		max-height : calc(100% - 5.5rem);
@@ -487,7 +494,48 @@ body > main {
 }
 
 /* DESKTOP */
-@media (min-width : 1025px) {
+@media (min-width : 769px) {
+
+	/* CONTENT */
+	body > main {
+		--horizontal-padding : 4rem;
+	}
+
+	/* DESKTOP NAV-BAR */
+	.nav-bar {
+		padding : 0 3rem;
+	}
+	.nav-bar-brand {
+		display         : flex;
+		flex-flow       : row nowrap;
+		justify-content : flex-start;
+		align-items     : flex-end;
+		padding-bottom  : 1rem;
+	}
+	.nav-bar-brand > img {
+		height : 4rem;
+	}
+	.nav-bar-link {
+		order   : 1;
+		padding : calc(4rem + 3px) 2.5rem 3rem 2.5rem;
+	}
+	.nav-bar-group {
+		order           : 0;
+		width           : auto;
+		margin          : 0;
+		flex-grow       : 0;
+		justify-content : flex-end;
+	}
+	.nav-bar-link.anchor {
+		padding       : 4rem 2.5rem 3rem 2.5rem;
+		width         : auto;
+		border-top    : 3px solid transparent;
+		border-bottom : none;
+	}
+	.nav-bar-link.anchor:hover {
+		color           : var(--blue);
+		text-decoration : none;
+	}
 
 	/* DESKTOP ACTIVITIES GRID */
 	#cards-grid {
